images and text rendering

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </nav>
     <main>
         <div class="grid-container">
-            <div class="grid-item"><img src=</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>  
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
+            <div class="grid-item"> <img src="./image/emilyHaaschVideo.png" alt="right facing profile of cartoon women with blue hair, gold glasses, and a gold earring" /> </div>
+            <div class="grid-item"> <img src="./image/EmilyHaaschIllistration.png" alt="three overlaying photos, the top is a black and white close up of a women's face" /></div>
+            <div class="grid-item"> <img src="./image/EmilyHaaschSpilce.png" alt="logo of the letter s" /> </div>  
+            <div class="grid-item"><img src="./image/EmilyHaaschVox.png" alt="icon on a make up pallette" /></div>
+            <div class="grid-item"> <img src="./image/EmilyHaaschArtDirection.png" alt="4 squares on top of each other, the top one has a smaller square, a circle, and a triangle on it"  /></div>
+            <div class="grid-item"> <img src="image/EmilyHaaschCardsAgainst.png"  alt="black and white cartoon on a person wearing a scarf and glasses with their eyes closed an a halo" /> </div>
         </div>
     </main>
 </head>
